methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:34: error: not found: value color
  flowers(color.red)
          ^FlowerPot:36: error: not found: value color
  flowers(color.orange)
          ^FlowerPot:38: error: not found: value color
  flowers(color.green)
          ^FlowerPot:40: error: not found: value color
  flowers(color.cyan)
          ^FlowerPot:42: error: not found: value color
  flowers(color.pink);recule(2)
          ^